RSWW-85 fix compilation issues after merging
tested, works